crates/carta/tests/snapshots/golden_writer__latex__common__div.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\protect\phantomsection\label{d}
body paragraph
