crates/carta/tests/snapshots/golden_writer__latex__common__emphasis-line-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\textbf{bold} opens the line

*literal star
