crates/carta/tests/snapshots/golden_writer__latex__common__emphasis-with-link.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\emph{see \href{http://example.com}{text} here}
