crates/carta/tests/snapshots/golden_writer__latex__common__escape-flanking.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
a * b ` c \textbar{} d and trailing\_ref\_
