crates/carta/tests/snapshots/golden_writer__latex__common__footnote-codeblock-end.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
ref\footnote{\begin{Verbatim}
code only
\end{Verbatim}
}
