crates/carta/tests/snapshots/golden_writer__latex__common__footnote-multipara.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
ref\footnote{first paragraph

  second paragraph}
