crates/carta/tests/snapshots/golden_writer__latex__common__footnote-two.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
x\footnote{first} y\footnote{second}
