crates/carta/tests/snapshots/golden_writer__latex__common__headers.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\section{One}\label{one}

\subsection{Two}\label{two}

Six
